/*****************************************************************************************************************/

//	@author		Michael Roberts <michael@observerly.com>
//	@package	@observerly/birpc/proto/store/v1
//	@license	Copyright Â© 2021-2024 observerly

/*****************************************************************************************************************/

syntax = "proto3";

/*****************************************************************************************************************/

package store.v1;

/*****************************************************************************************************************/

message GetFITSAsGenericHandlerRequest {
  string owner = 1;
  string bucket_name = 2;
  string location = 3;
}

/*****************************************************************************************************************/

message GetFITSAsGenericHandlerResponse {
  string download_url = 1;
  int32 height = 2;
  int32 width = 3;
}

/*****************************************************************************************************************/

service StorageService {
  rpc GetFITSAsTIFFHandler(GetFITSAsGenericHandlerRequest) returns (GetFITSAsGenericHandlerResponse) {}
}

/*****************************************************************************************************************/

